# docs/openapi/pn-mandate-v1.yaml
@@ -41,6 +41,8 @@ paths:
       description: Return total mandates based on required status if filter's specified. If no filter is present, returns total of all pending and active mandates
       operationId: countMandatesByDelegate
       parameters:
+        - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
+        - $ref: 'remote-refs.yaml#/components/parameters/cxTypeAuthFleet'
         - name: status
           in: query
           schema:
@@ -64,6 +66,9 @@ paths:
         - mandate-service
       description: Create a new mandate, returns the just created mandate if successful
       operationId: createMandate
+      parameters:
+        - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
+        - $ref: 'remote-refs.yaml#/components/parameters/cxTypeAuthFleet'
       requestBody:
         content:
           application/json:
@@ -89,6 +94,8 @@ paths:
       description: Accept a mandate
       operationId: acceptMandate
       parameters:
+        - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
+        - $ref: 'remote-refs.yaml#/components/parameters/cxTypeAuthFleet'
         - name: mandateId
           in: path
           required: true
@@ -115,6 +122,8 @@ paths:
       description: Reject a mandate
       operationId: rejectMandate
       parameters:
+        - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
+        - $ref: 'remote-refs.yaml#/components/parameters/cxTypeAuthFleet'
         - name: mandateId
           in: path
           required: true
@@ -136,6 +145,8 @@ paths:
       description: Revoke a mandate
       operationId: revokeMandate
       parameters:
+        - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
+        - $ref: 'remote-refs.yaml#/components/parameters/cxTypeAuthFleet'
         - name: mandateId
           in: path
           required: true
@@ -157,6 +168,8 @@ paths:
       description: Return filtered mandates based on required status if filter's specified. If no filter is present, returns all pending and active mandates
       operationId: listMandatesByDelegate_1
       parameters:
+        - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
+        - $ref: 'remote-refs.yaml#/components/parameters/cxTypeAuthFleet'
         - name: status
           in: query
           schema:
@@ -182,6 +195,9 @@ paths:
         - mandate-service
       description: Return all pending and active mandates
       operationId: listMandatesByDelegator_1
+      parameters:
+        - $ref: 'remote-refs.yaml#/components/parameters/cxIdAuthFleet'
+        - $ref: 'remote-refs.yaml#/components/parameters/cxTypeAuthFleet'
       responses:
         '200':
           description: OK
